feat(user): add 2 user api
1. /user/info
2. /user/list
