# server/data/ent/job.go
@@ -1,173 +1,0 @@
-// Code generated by ent, DO NOT EDIT.
-
-package ent
-
-import (
-	"fmt"
-	"strings"
-
-	"entgo.io/ent"
-	"entgo.io/ent/dialect/sql"
-	"github.com/dstgo/lobby/server/data/ent/job"
-)
-
-// container cron job tables
-type Job struct {
-	config `json:"-"`
-	// ID of the ent.
-	ID int `json:"id,omitempty"`
-	// Name holds the value of the "name" field.
-	Name string `json:"name,omitempty"`
-	// Description holds the value of the "description" field.
-	Description string `json:"description,omitempty"`
-	// JobType holds the value of the "job_type" field.
-	JobType int `json:"job_type,omitempty"`
-	// CreatedAt holds the value of the "created_at" field.
-	CreatedAt int64 `json:"created_at,omitempty"`
-	// UpdatedAt holds the value of the "updated_at" field.
-	UpdatedAt int64 `json:"updated_at,omitempty"`
-	// Edges holds the relations/edges for other nodes in the graph.
-	// The values are being populated by the JobQuery when eager-loading is set.
-	Edges        JobEdges `json:"edges"`
-	selectValues sql.SelectValues
-}
-
-// JobEdges holds the relations/edges for other nodes in the graph.
-type JobEdges struct {
-	// Owner holds the value of the owner edge.
-	Owner []*Container `json:"owner,omitempty"`
-	// loadedTypes holds the information for reporting if a
-	// type was loaded (or requested) in eager-loading or not.
-	loadedTypes [1]bool
-}
-
-// OwnerOrErr returns the Owner value or an error if the edge
-// was not loaded in eager-loading.
-func (e JobEdges) OwnerOrErr() ([]*Container, error) {
-	if e.loadedTypes[0] {
-		return e.Owner, nil
-	}
-	return nil, &NotLoadedError{edge: "owner"}
-}
-
-// scanValues returns the types for scanning values from sql.Rows.
-func (*Job) scanValues(columns []string) ([]any, error) {
-	values := make([]any, len(columns))
-	for i := range columns {
-		switch columns[i] {
-		case job.FieldID, job.FieldJobType, job.FieldCreatedAt, job.FieldUpdatedAt:
-			values[i] = new(sql.NullInt64)
-		case job.FieldName, job.FieldDescription:
-			values[i] = new(sql.NullString)
-		default:
-			values[i] = new(sql.UnknownType)
-		}
-	}
-	return values, nil
-}
-
-// assignValues assigns the values that were returned from sql.Rows (after scanning)
-// to the Job fields.
-func (j *Job) assignValues(columns []string, values []any) error {
-	if m, n := len(values), len(columns); m < n {
-		return fmt.Errorf("mismatch number of scan values: %d != %d", m, n)
-	}
-	for i := range columns {
-		switch columns[i] {
-		case job.FieldID:
-			value, ok := values[i].(*sql.NullInt64)
-			if !ok {
-				return fmt.Errorf("unexpected type %T for field id", value)
-			}
-			j.ID = int(value.Int64)
-		case job.FieldName:
-			if value, ok := values[i].(*sql.NullString); !ok {
-				return fmt.Errorf("unexpected type %T for field name", values[i])
-			} else if value.Valid {
-				j.Name = value.String
-			}
-		case job.FieldDescription:
-			if value, ok := values[i].(*sql.NullString); !ok {
-				return fmt.Errorf("unexpected type %T for field description", values[i])
-			} else if value.Valid {
-				j.Description = value.String
-			}
-		case job.FieldJobType:
-			if value, ok := values[i].(*sql.NullInt64); !ok {
-				return fmt.Errorf("unexpected type %T for field job_type", values[i])
-			} else if value.Valid {
-				j.JobType = int(value.Int64)
-			}
-		case job.FieldCreatedAt:
-			if value, ok := values[i].(*sql.NullInt64); !ok {
-				return fmt.Errorf("unexpected type %T for field created_at", values[i])
-			} else if value.Valid {
-				j.CreatedAt = value.Int64
-			}
-		case job.FieldUpdatedAt:
-			if value, ok := values[i].(*sql.NullInt64); !ok {
-				return fmt.Errorf("unexpected type %T for field updated_at", values[i])
-			} else if value.Valid {
-				j.UpdatedAt = value.Int64
-			}
-		default:
-			j.selectValues.Set(columns[i], values[i])
-		}
-	}
-	return nil
-}
-
-// Value returns the ent.Value that was dynamically selected and assigned to the Job.
-// This includes values selected through modifiers, order, etc.
-func (j *Job) Value(name string) (ent.Value, error) {
-	return j.selectValues.Get(name)
-}
-
-// QueryOwner queries the "owner" edge of the Job entity.
-func (j *Job) QueryOwner() *ContainerQuery {
-	return NewJobClient(j.config).QueryOwner(j)
-}
-
-// Update returns a builder for updating this Job.
-// Note that you need to call Job.Unwrap() before calling this method if this Job
-// was returned from a transaction, and the transaction was committed or rolled back.
-func (j *Job) Update() *JobUpdateOne {
-	return NewJobClient(j.config).UpdateOne(j)
-}
-
-// Unwrap unwraps the Job entity that was returned from a transaction after it was closed,
-// so that all future queries will be executed through the driver which created the transaction.
-func (j *Job) Unwrap() *Job {
-	_tx, ok := j.config.driver.(*txDriver)
-	if !ok {
-		panic("ent: Job is not a transactional entity")
-	}
-	j.config.driver = _tx.drv
-	return j
-}
-
-// String implements the fmt.Stringer.
-func (j *Job) String() string {
-	var builder strings.Builder
-	builder.WriteString("Job(")
-	builder.WriteString(fmt.Sprintf("id=%v, ", j.ID))
-	builder.WriteString("name=")
-	builder.WriteString(j.Name)
-	builder.WriteString(", ")
-	builder.WriteString("description=")
-	builder.WriteString(j.Description)
-	builder.WriteString(", ")
-	builder.WriteString("job_type=")
-	builder.WriteString(fmt.Sprintf("%v", j.JobType))
-	builder.WriteString(", ")
-	builder.WriteString("created_at=")
-	builder.WriteString(fmt.Sprintf("%v", j.CreatedAt))
-	builder.WriteString(", ")
-	builder.WriteString("updated_at=")
-	builder.WriteString(fmt.Sprintf("%v", j.UpdatedAt))
-	builder.WriteByte(')')
-	return builder.String()
-}
-
-// Jobs is a parsable slice of Job.
-type Jobs []*Job
