# server/data/ent/node_create.go
@@ -1,322 +1,0 @@
-// Code generated by ent, DO NOT EDIT.
-
-package ent
-
-import (
-	"context"
-	"errors"
-	"fmt"
-
-	"entgo.io/ent/dialect/sql/sqlgraph"
-	"entgo.io/ent/schema/field"
-	"github.com/dstgo/lobby/server/data/ent/container"
-	"github.com/dstgo/lobby/server/data/ent/node"
-)
-
-// NodeCreate is the builder for creating a Node entity.
-type NodeCreate struct {
-	config
-	mutation *NodeMutation
-	hooks    []Hook
-}
-
-// SetUID sets the "uid" field.
-func (nc *NodeCreate) SetUID(s string) *NodeCreate {
-	nc.mutation.SetUID(s)
-	return nc
-}
-
-// SetNillableUID sets the "uid" field if the given value is not nil.
-func (nc *NodeCreate) SetNillableUID(s *string) *NodeCreate {
-	if s != nil {
-		nc.SetUID(*s)
-	}
-	return nc
-}
-
-// SetName sets the "name" field.
-func (nc *NodeCreate) SetName(s string) *NodeCreate {
-	nc.mutation.SetName(s)
-	return nc
-}
-
-// SetAddress sets the "address" field.
-func (nc *NodeCreate) SetAddress(s string) *NodeCreate {
-	nc.mutation.SetAddress(s)
-	return nc
-}
-
-// SetNote sets the "note" field.
-func (nc *NodeCreate) SetNote(s string) *NodeCreate {
-	nc.mutation.SetNote(s)
-	return nc
-}
-
-// SetCreatedAt sets the "created_at" field.
-func (nc *NodeCreate) SetCreatedAt(i int64) *NodeCreate {
-	nc.mutation.SetCreatedAt(i)
-	return nc
-}
-
-// SetNillableCreatedAt sets the "created_at" field if the given value is not nil.
-func (nc *NodeCreate) SetNillableCreatedAt(i *int64) *NodeCreate {
-	if i != nil {
-		nc.SetCreatedAt(*i)
-	}
-	return nc
-}
-
-// SetUpdatedAt sets the "updated_at" field.
-func (nc *NodeCreate) SetUpdatedAt(i int64) *NodeCreate {
-	nc.mutation.SetUpdatedAt(i)
-	return nc
-}
-
-// SetNillableUpdatedAt sets the "updated_at" field if the given value is not nil.
-func (nc *NodeCreate) SetNillableUpdatedAt(i *int64) *NodeCreate {
-	if i != nil {
-		nc.SetUpdatedAt(*i)
-	}
-	return nc
-}
-
-// AddContainerIDs adds the "containers" edge to the Container entity by IDs.
-func (nc *NodeCreate) AddContainerIDs(ids ...int) *NodeCreate {
-	nc.mutation.AddContainerIDs(ids...)
-	return nc
-}
-
-// AddContainers adds the "containers" edges to the Container entity.
-func (nc *NodeCreate) AddContainers(c ...*Container) *NodeCreate {
-	ids := make([]int, len(c))
-	for i := range c {
-		ids[i] = c[i].ID
-	}
-	return nc.AddContainerIDs(ids...)
-}
-
-// Mutation returns the NodeMutation object of the builder.
-func (nc *NodeCreate) Mutation() *NodeMutation {
-	return nc.mutation
-}
-
-// Save creates the Node in the database.
-func (nc *NodeCreate) Save(ctx context.Context) (*Node, error) {
-	nc.defaults()
-	return withHooks(ctx, nc.sqlSave, nc.mutation, nc.hooks)
-}
-
-// SaveX calls Save and panics if Save returns an error.
-func (nc *NodeCreate) SaveX(ctx context.Context) *Node {
-	v, err := nc.Save(ctx)
-	if err != nil {
-		panic(err)
-	}
-	return v
-}
-
-// Exec executes the query.
-func (nc *NodeCreate) Exec(ctx context.Context) error {
-	_, err := nc.Save(ctx)
-	return err
-}
-
-// ExecX is like Exec, but panics if an error occurs.
-func (nc *NodeCreate) ExecX(ctx context.Context) {
-	if err := nc.Exec(ctx); err != nil {
-		panic(err)
-	}
-}
-
-// defaults sets the default values of the builder before save.
-func (nc *NodeCreate) defaults() {
-	if _, ok := nc.mutation.UID(); !ok {
-		v := node.DefaultUID()
-		nc.mutation.SetUID(v)
-	}
-	if _, ok := nc.mutation.CreatedAt(); !ok {
-		v := node.DefaultCreatedAt()
-		nc.mutation.SetCreatedAt(v)
-	}
-	if _, ok := nc.mutation.UpdatedAt(); !ok {
-		v := node.DefaultUpdatedAt()
-		nc.mutation.SetUpdatedAt(v)
-	}
-}
-
-// check runs all checks and user-defined validators on the builder.
-func (nc *NodeCreate) check() error {
-	if _, ok := nc.mutation.UID(); !ok {
-		return &ValidationError{Name: "uid", err: errors.New(`ent: missing required field "Node.uid"`)}
-	}
-	if _, ok := nc.mutation.Name(); !ok {
-		return &ValidationError{Name: "name", err: errors.New(`ent: missing required field "Node.name"`)}
-	}
-	if _, ok := nc.mutation.Address(); !ok {
-		return &ValidationError{Name: "address", err: errors.New(`ent: missing required field "Node.address"`)}
-	}
-	if _, ok := nc.mutation.Note(); !ok {
-		return &ValidationError{Name: "note", err: errors.New(`ent: missing required field "Node.note"`)}
-	}
-	if _, ok := nc.mutation.CreatedAt(); !ok {
-		return &ValidationError{Name: "created_at", err: errors.New(`ent: missing required field "Node.created_at"`)}
-	}
-	if _, ok := nc.mutation.UpdatedAt(); !ok {
-		return &ValidationError{Name: "updated_at", err: errors.New(`ent: missing required field "Node.updated_at"`)}
-	}
-	return nil
-}
-
-func (nc *NodeCreate) sqlSave(ctx context.Context) (*Node, error) {
-	if err := nc.check(); err != nil {
-		return nil, err
-	}
-	_node, _spec := nc.createSpec()
-	if err := sqlgraph.CreateNode(ctx, nc.driver, _spec); err != nil {
-		if sqlgraph.IsConstraintError(err) {
-			err = &ConstraintError{msg: err.Error(), wrap: err}
-		}
-		return nil, err
-	}
-	id := _spec.ID.Value.(int64)
-	_node.ID = int(id)
-	nc.mutation.id = &_node.ID
-	nc.mutation.done = true
-	return _node, nil
-}
-
-func (nc *NodeCreate) createSpec() (*Node, *sqlgraph.CreateSpec) {
-	var (
-		_node = &Node{config: nc.config}
-		_spec = sqlgraph.NewCreateSpec(node.Table, sqlgraph.NewFieldSpec(node.FieldID, field.TypeInt))
-	)
-	if value, ok := nc.mutation.UID(); ok {
-		_spec.SetField(node.FieldUID, field.TypeString, value)
-		_node.UID = value
-	}
-	if value, ok := nc.mutation.Name(); ok {
-		_spec.SetField(node.FieldName, field.TypeString, value)
-		_node.Name = value
-	}
-	if value, ok := nc.mutation.Address(); ok {
-		_spec.SetField(node.FieldAddress, field.TypeString, value)
-		_node.Address = value
-	}
-	if value, ok := nc.mutation.Note(); ok {
-		_spec.SetField(node.FieldNote, field.TypeString, value)
-		_node.Note = value
-	}
-	if value, ok := nc.mutation.CreatedAt(); ok {
-		_spec.SetField(node.FieldCreatedAt, field.TypeInt64, value)
-		_node.CreatedAt = value
-	}
-	if value, ok := nc.mutation.UpdatedAt(); ok {
-		_spec.SetField(node.FieldUpdatedAt, field.TypeInt64, value)
-		_node.UpdatedAt = value
-	}
-	if nodes := nc.mutation.ContainersIDs(); len(nodes) > 0 {
-		edge := &sqlgraph.EdgeSpec{
-			Rel:     sqlgraph.M2M,
-			Inverse: false,
-			Table:   node.ContainersTable,
-			Columns: node.ContainersPrimaryKey,
-			Bidi:    false,
-			Target: &sqlgraph.EdgeTarget{
-				IDSpec: sqlgraph.NewFieldSpec(container.FieldID, field.TypeInt),
-			},
-		}
-		for _, k := range nodes {
-			edge.Target.Nodes = append(edge.Target.Nodes, k)
-		}
-		_spec.Edges = append(_spec.Edges, edge)
-	}
-	return _node, _spec
-}
-
-// NodeCreateBulk is the builder for creating many Node entities in bulk.
-type NodeCreateBulk struct {
-	config
-	err      error
-	builders []*NodeCreate
-}
-
-// Save creates the Node entities in the database.
-func (ncb *NodeCreateBulk) Save(ctx context.Context) ([]*Node, error) {
-	if ncb.err != nil {
-		return nil, ncb.err
-	}
-	specs := make([]*sqlgraph.CreateSpec, len(ncb.builders))
-	nodes := make([]*Node, len(ncb.builders))
-	mutators := make([]Mutator, len(ncb.builders))
-	for i := range ncb.builders {
-		func(i int, root context.Context) {
-			builder := ncb.builders[i]
-			builder.defaults()
-			var mut Mutator = MutateFunc(func(ctx context.Context, m Mutation) (Value, error) {
-				mutation, ok := m.(*NodeMutation)
-				if !ok {
-					return nil, fmt.Errorf("unexpected mutation type %T", m)
-				}
-				if err := builder.check(); err != nil {
-					return nil, err
-				}
-				builder.mutation = mutation
-				var err error
-				nodes[i], specs[i] = builder.createSpec()
-				if i < len(mutators)-1 {
-					_, err = mutators[i+1].Mutate(root, ncb.builders[i+1].mutation)
-				} else {
-					spec := &sqlgraph.BatchCreateSpec{Nodes: specs}
-					// Invoke the actual operation on the latest mutation in the chain.
-					if err = sqlgraph.BatchCreate(ctx, ncb.driver, spec); err != nil {
-						if sqlgraph.IsConstraintError(err) {
-							err = &ConstraintError{msg: err.Error(), wrap: err}
-						}
-					}
-				}
-				if err != nil {
-					return nil, err
-				}
-				mutation.id = &nodes[i].ID
-				if specs[i].ID.Value != nil {
-					id := specs[i].ID.Value.(int64)
-					nodes[i].ID = int(id)
-				}
-				mutation.done = true
-				return nodes[i], nil
-			})
-			for i := len(builder.hooks) - 1; i >= 0; i-- {
-				mut = builder.hooks[i](mut)
-			}
-			mutators[i] = mut
-		}(i, ctx)
-	}
-	if len(mutators) > 0 {
-		if _, err := mutators[0].Mutate(ctx, ncb.builders[0].mutation); err != nil {
-			return nil, err
-		}
-	}
-	return nodes, nil
-}
-
-// SaveX is like Save, but panics if an error occurs.
-func (ncb *NodeCreateBulk) SaveX(ctx context.Context) []*Node {
-	v, err := ncb.Save(ctx)
-	if err != nil {
-		panic(err)
-	}
-	return v
-}
-
-// Exec executes the query.
-func (ncb *NodeCreateBulk) Exec(ctx context.Context) error {
-	_, err := ncb.Save(ctx)
-	return err
-}
-
-// ExecX is like Exec, but panics if an error occurs.
-func (ncb *NodeCreateBulk) ExecX(ctx context.Context) {
-	if err := ncb.Exec(ctx); err != nil {
-		panic(err)
-	}
-}
